--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Konkhmer+Sleokchher&display=swap');
+
 :root {
     --background: #0d0c11;
 
@@ -28,5 +30,10 @@
 }
 
 body {
+    margin: 0;
+    padding: 0;
     background-color: var(--background);
+    color: white;
+    font-size: 19px;
+    font-family: konkhmer sleokchher;
 }
