--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -139,4 +139,78 @@
     border-radius: 100%;
 }
 
-/*If 1500px then make it smaller */
+@media screen and (max-width: 1500px) {
+    .Navbar {
+        height: 100px;
+    }
+
+    .Navbar-1 {
+        width: 200px;
+    }
+
+    .Navbar-2 {
+        width: 600px;
+    }
+
+    .Navbar-3 {
+        width: 200px;
+    }
+
+    .Navbar-4 {
+        width: 150px;
+    }  
+    
+    .dot {
+        width: 15px;
+        height: 15  px;
+    }
+}
+
+@media screen and (max-width: 1250px) {
+    .Navbar {
+        height: 80px;
+    }
+
+    .Navbar-1 {
+        width: 150px;
+    }
+
+    .Navbar-2 {
+        width: 500px;
+    }
+
+    .Navbar-3 {
+        width: 150px;
+    }
+
+    .Navbar-4 {
+        width: 100px;
+    }    
+
+    .dot {
+        width: 12px;
+        height: 12px;
+        top: 0;
+    }
+
+    .Logo {
+        width: 100px;
+        height: 25px;
+    }
+}
+
+@media screen and (max-width: 1050px) {
+    .Navbar {
+        padding-left: 20px;
+        padding-right: 20px;
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+    
+}
+
+@media screen and (max-width: 1000px) {
+    .Navbar {
+        height: 70px;
+    }
+}
