--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,14 @@
 
 }
 
+#root {
+    width: 100%;
+    padding: 0;
+    margin: 0;
+}
+
 body {
+    width: 100%;
     margin: 0;
     padding: 0;
     background-color: var(--background);
