Added card svg's still to format

--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@
     --secondary-green: #46d369;
 
     /* Other */
-    --gray-100: #343436;
+    --gray-100: #4D4C51;
     --gray-200: #69686d;
     --black-100: #17161b;
     --gold-100: #f1c02d;
