--- a/src/components/MovieTop/MovieTop.css
+++ b/src/components/MovieTop/MovieTop.css
@@ -33,7 +33,8 @@
 }
 
 .Movie-Info-Content {
-    max-width: 700px;
+    max-width: 60%;
+    width: auto;
     min-width: 700px;
     margin-left: 11vw;
 }
@@ -49,7 +50,7 @@
     font-style: normal;
     font-weight: 400;
     letter-spacing: -0.343px;
-    margin-bottom: 30px;
+    margin-bottom: 27px;
 }
 
 .Movie-Info-Top>.Movie-Info-More {
@@ -64,11 +65,16 @@
 }
 
 .Movie-Info-Rating {
-    font-size: 24px;
+    font-size: 23px;
     color: #fff;
     margin-right: 13px;
     align-items: center;
     justify-content: center;
+}
+
+.Movie-Info-Rating > img {
+    width: 23px;
+    height: 23px;
 }
 
 .Movie-Info-Decoration {
@@ -80,16 +86,16 @@
 .Movie-Info-Middle {
     display: flex;
     flex-direction: column;
-    margin-top: 20px;
 }
 
 .Movie-Info-Title {
-    font-size: 66.425px;
+    font-size: 66px;
     font-style: normal;
     font-weight: 400;
-    line-height: 0;
+    line-height: 0.9;
     letter-spacing: -1.329px;
-    margin-bottom: 75px;
+    margin-bottom: 40px;
+    width: fit-content;
 }
 
 .Movie-Info-Description {
@@ -143,4 +149,11 @@
 .Add-list-btn:hover {
     background-color: var(--primaty-black-hover);
     box-shadow: 0 0 90px 30px rgba(17, 17, 17, 0.5);
+}
+
+
+@media screen and (max-width: 1420px) {
+    .Movie-Info-Description {
+        width: 100% !important;
+    } 
 }
