--- a/src/components/Sections/Props/Card/Card.css
+++ b/src/components/Sections/Props/Card/Card.css
@@ -2,10 +2,14 @@
     display: flex;
     flex-direction: column;
     width: 255px;
-    height: 455px;
+    min-width: 255px;
+    max-width: 255px;
+    height: 460px;
     background: none;
     justify-content: space-between;
     align-items: center;
+    cursor: default;
+    padding: 1%;
 }
 
 .Card-Top {
@@ -25,11 +29,18 @@
     background-position: center;
 }
 
+.CardA {
+    display: flex;
+    position: absolute;
+    width: 255px;
+    height: 460px;
+}
+
 .Card-Info {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 65px;
+    height: 69px;
     justify-content: space-between;
     box-sizing: border-box;
 }
@@ -54,10 +65,64 @@
 
 .Card-Left, .Card-Right {
     display: flex;
-    align-items: center;
+    flex-direction: row;
+}
+
+.Card-Left {
+    width: 47%;
+}
+
+.Card-Right {
+    justify-content: space-between;
+    width: 53%;
+}
+
+.Card-Left {
+    justify-content: flex-start;
 }
 
 .Card-Year {
     font-size: 18px;
     color: #4D4C51;
 }
+
+.Card-Add-To-Favorite, .Card-Already-Watched {
+    height: 33px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.Card-Add-To-Favorite >button> svg {
+    fill: #4D4C51;
+}
+
+.Card-Already-Watched >button> svg {
+    fill: #4D4C51;
+}
+
+.Selected-Red > button >svg {
+    fill: var(--primary-red)
+}
+
+.CardBtn {
+    width: 100%;
+    background: none;
+    border: none;
+    height: 33px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    z-index: 3;
+}
+
+.Card-Rating >img {
+    width: 20px;
+    height: 20px;
+}
+
+.Card-Rating {
+    color: #f0ab2e;
+} 
