--- a/src/index.css
+++ b/src/index.css
@@ -40,6 +40,7 @@
 body {
     height: 9999px;
     width: 100%;
+    overflow-x: hidden;
     margin: 0;
     padding: 0;
     background-color: var(--background);
